--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1"
   },
